[package]
name = "auto-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "system-config"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
