[package]
name = "auto-server"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "system-config"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
flate2 = "1.0"
tar = "0.4"
tempfile = "3.10"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
